Closed Bug 952646 Opened 11 years ago Closed 10 years ago

Fix an exact rooting hazard in rollbackProperties

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: terrence, Assigned: terrence)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Hazard is on |this|, so make the method static and pass obj as a handle.
Attachment #8350779 - Flags: review?(sphink)
Attachment #8350779 - Attachment is patch: true
Attachment #8350779 - Flags: review?(sphink) → review+
So it looks like this patch is not necessary, because rollbackProperties is only called while GC is suppressed. Do we still want it or not?
Yeah, I let this set because Brian changed the caller, removing the hazard. I wanted to check and see if it was still worth landing before going forward. After discussion with Steve on IRC, we decided it's probably better to land that not.

https://hg.mozilla.org/integration/mozilla-inbound/rev/eb455b3e4584
https://hg.mozilla.org/mozilla-central/rev/eb455b3e4584
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: