Bug 952646 - Fix a potential exact rooting hazard in rollbackProperties; r=sfink